# cpal

./: .gitignore  .gitignore.swp  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.arm64  Jenkinsfile  README.md  SECURITY.md  UPGRADING.md  _typos.toml  appveyor.yml  build.rs  build_and_test.sh  flake.nix
.circleci/: config.yml
.github/: dependabot.yml
.github/actions/determine-msrv/: action.yml
.github/actions/setup-asio/: action.yml
.github/workflows/: cpal.yml  platforms.yml  quality.yml  sanitizers.yml
alsa-sys/: .gitignore  Cargo.toml  README.md  build.rs
alsa-sys/src/: lib.rs
asio-sys/: .Cargo.toml.swp  .build.rs.swp  .build.rs.un~  .gitignore  CHANGELOG.md  Cargo.toml  README.md  asio_stub_bindings.rs  build.bat  build.rs  build.rs~
asio-sys/asio-link/: .helpers.cpp.swp  .helpers.hpp.swp  helpers.cpp  helpers.hpp
asio-sys/examples/: .test.rs.swp  .test.rs.un~  enumerate.rs  test.rs  test.rs~
asio-sys/src/: .asio_import.rs.swp  .errors.rs.swp  .lib.rs.swp  .lib.rs.un~  asio_import.rs  errors.rs  lib.rs  lib.rs~
asio-sys/src/bindings/: asio_import.rs  errors.rs  mod.rs
core_audio-sys/: Cargo.toml
core_audio-sys/src/: audio_unit.rs  lib.rs
examples/: README.md  android.rs  asio_panel.rs  basic.rs  beep.rs  crash.rs  custom.rs  duplex.rs  duplex_feedback.rs  enumerate.rs  feedback.rs  formats.rs  jack-beep.rs  jack-feedback.rs  macos_system_audio_permission.rs  music.rs  noise.rs  record_wav.rs  spectrogram.rs  synth_tones.rs
examples/android/: .gitignore  Cargo.toml  README.md
examples/android/src/: lib.rs
examples/audioworklet-beep/: Cargo.toml  README.md  Trunk.toml  index.html
examples/audioworklet-beep/.cargo/: config.toml
examples/audioworklet-beep/src/: lib.rs
examples/ios-feedback/: Cargo.toml  README.md  build_rust_deps.sh
examples/ios-feedback/.cargo/: config
examples/ios-feedback/cpal-ios-example.xcodeproj/: project.pbxproj
examples/ios-feedback/cpal-ios-example.xcodeproj/xcuserdata/mikeh.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/ios-feedback/ios-src/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m
examples/ios-feedback/src/: feedback.rs  lib.rs
examples/wasm-beep/: .gitignore  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
examples/wasm-beep/src/: lib.rs
examples/web-audio-worklet-beep/: Cargo.toml
examples/web-audio-worklet-beep/.cargo/: config.toml
examples/web-audio-worklet-beep/src/: lib.rs
pipewire-client/: Cargo.toml
pipewire-client/.containers/: pipewire.test.container
pipewire-client/src/: constants.rs  error.rs  info.rs  lib.rs  listeners.rs  messages.rs  states.rs  utils.rs
pipewire-client/src/client/: channel.rs  channel_test.rs  connection_string.rs  implementation.rs  implementation_test.rs  mod.rs
pipewire-client/src/client/api/: core.rs  core_test.rs  fixtures.rs  internal.rs  mod.rs  node.rs  node_test.rs  stream.rs  stream_test.rs
pipewire-client/src/client/handlers/: event.rs  mod.rs  registry.rs  request.rs  thread.rs
pipewire-client/src/test_utils/: api.rs  fixtures.rs  mod.rs  server.rs
pipewire-common/: Cargo.toml
pipewire-common/src/: constants.rs  lib.rs  macros.rs  utils.rs
pipewire-spa-utils/: Cargo.toml  build.rs
pipewire-spa-utils/build_modules/: mod.rs
pipewire-spa-utils/build_modules/format/: mod.rs
pipewire-spa-utils/build_modules/syntax/: mod.rs  utils.rs
pipewire-spa-utils/build_modules/syntax/generators/: enumerator.rs  mod.rs
pipewire-spa-utils/build_modules/syntax/parsers/: mod.rs
pipewire-spa-utils/build_modules/utils/: mod.rs
pipewire-spa-utils/src/: lib.rs
pipewire-spa-utils/src/audio/: mod.rs  raw.rs
pipewire-spa-utils/src/format/: mod.rs
pipewire-spa-utils/src/macros/: mod.rs
pipewire-spa-utils/src/utils/: mod.rs
pipewire-test-utils/: Cargo.toml
pipewire-test-utils/.containers/: .digests  pipewire.test.container  virtual.nodes.conf
pipewire-test-utils/.containers/.tmp/: entrypoint.bash  healthcheck.bash  supervisor.conf
pipewire-test-utils/src/: environment.rs  lib.rs  server.rs
pipewire-test-utils/src/containers/: container.rs  mod.rs  options.rs  sync_api.rs
src/: conversions.rs  device_description.rs  duplex.rs  error.rs  lib.rs  sample_format.rs  samples_formats.rs  timestamp.rs  traits.rs
src/alsa/: enumerate.rs  mod.rs
src/core_audio/: mod.rs
src/coreaudio/: enumerate.rs  mod.rs
src/emscripten/: mod.rs
src/host/: com.rs  equilibrium.rs  error_emit.rs  latch.rs  mod.rs
src/host/aaudio/: android_media.rs  convert.rs  java_interface.rs  mod.rs
src/host/aaudio/java_interface/: audio_features.rs  definitions.rs  (+3 more)
src/host/alsa/: enumerate.rs  mod.rs  mod.rs.working
src/host/asio/: device.rs  mod.rs  stream.rs
src/host/audioworklet/: dependent_module.rs  mod.rs  worklet.js
src/host/coreaudio/: enumerate.rs  mod.rs
src/host/custom/: erased.rs  mod.rs
src/host/emscripten/: mod.rs
src/host/jack/: device.rs  mod.rs  stream.rs
src/host/null/: mod.rs
src/host/oboe/: android_media.rs  convert.rs  input_callback.rs  mod.rs  output_callback.rs
src/host/pipewire/: conn.rs  device.rs  host.rs  mod.rs  stream.rs  utils.rs
src/host/pulseaudio/: mod.rs  stream.rs
src/host/screencapturekit/: enumerate.rs  mod.rs
src/host/sndio/: adapters.rs  endian.rs  mod.rs  runner.rs
src/host/wasapi/: com.rs  device.rs  mod.rs  stream.rs
src/host/wasapi_exclusive/: mod.rs
src/host/web_audio_worklet/: dependent_module.rs  mod.rs  worklet.js
src/host/webaudio/: atomic_buffer.rs  bridge.js  bridge.rs  mod.rs  worker.js  worklet.js
src/null/: mod.rs
src/os/: mod.rs
src/os/windows/: mod.rs
src/platform/: asio.rs  host_id.rs  maybe_send.rs  mod.rs
src/platform/coreaudio/: mod.rs
src/platform/windows/: mod.rs
src/samples/: f32.rs  f64.rs  i16.rs  i32.rs  i64.rs  i8.rs  mod.rs  u16.rs  u32.rs  u64.rs  u8.rs
src/wasapi/: com.rs  device.rs  endpoint.rs  enumerate.rs  mod.rs  stream.rs  voice.rs
tests/: continious_input.rs  wasm.rs
(+26 files in other folders)
