[package]
name = "cpal"
version = "0.16.0"
description = "Low-level cross-platform audio I/O library in pure Rust."
repository = "https://github.com/rustaudio/cpal"
documentation = "https://docs.rs/cpal"
license = "Apache-2.0"
keywords = ["audio", "sound"]
edition = "2021"
rust-version = "1.70"

[features]
asio = ["asio-sys", "num-traits"] # Only available on Windows. See README for setup instructions.

# Deprecated, the `oboe` backend has been removed
oboe-shared-stdcxx = []

[dependencies]
dasp_sample = "0.11"

[dev-dependencies]
anyhow = "1.0"
hound = "3.5"
ringbuf = "0.4.1"
clap = { version = "4.0", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54.0", features = [
    "Win32_Media_Audio",
    "Win32_Foundation",
    "Win32_Devices_Properties",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Variant",
    "Win32_Media_Multimedia",
    "Win32_UI_Shell_PropertiesSystem"
]}
audio_thread_priority = { version = "0.33.0", optional = true }
asio-sys = { version = "0.2", path = "asio-sys", optional = true }
num-traits = { version = "0.2.6", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd"))'.dependencies]
alsa = "0.9"
libc = "0.2"
audio_thread_priority = { version = "0.33.0", optional = true }
jack = { version = "0.13.0", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach2 = "0.4" # For access to mach_timebase type.

[target.'cfg(target_vendor = "apple")'.dependencies]
coreaudio-rs = { version = "0.13.0", default-features = false, features = [
    "core_audio",
    "audio_toolbox",
] }
objc2-core-audio = { version = "0.3.1", default-features = false, features = [
    "std",
    "AudioHardware",
    "AudioHardwareDeprecated",
] }
objc2-audio-toolbox = { version = "0.3.1", default-features = false, features = [
    "std",
    "AUComponent",
    "AudioUnitProperties",
] }
objc2-core-audio-types = { version = "0.3.1", default-features = false, features = [
    "std",
    "CoreAudioBaseTypes",
] }

[target.'cfg(target_os = "emscripten")'.dependencies]
wasm-bindgen = { version = "0.2.89" }
wasm-bindgen-futures = "0.4.33"
js-sys = { version = "0.3.35" }
web-sys = { version = "0.3.35", features = [ "AudioContext", "AudioContextOptions", "AudioBuffer", "AudioBufferSourceNode", "AudioNode",  "AudioDestinationNode", "Window", "AudioContextState"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = { version = "0.2.58", optional = true }
js-sys = { version = "0.3.35" }
web-sys = { version = "0.3.35", features = [ "AudioContext", "AudioContextOptions", "AudioBuffer", "AudioBufferSourceNode", "AudioNode",  "AudioDestinationNode", "Window", "AudioContextState"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk = { version = "0.9", default-features = false, features = ["audio", "api-level-26"]}
ndk-context = "0.1"
jni = "0.21"
num-derive = "0.4"
num-traits = "0.2"

[[example]]
name = "beep"

[[example]]
name = "enumerate"

[[example]]
name = "feedback"

[[example]]
name = "record_wav"

[[example]]
name = "synth_tones"
