[package]
name = "cpal"
version = "0.16.0"
description = "Low-level cross-platform audio I/O library in pure Rust."
repository = "https://github.com/rustaudio/cpal"
documentation = "https://docs.rs/cpal"
license = "Apache-2.0"
keywords = ["audio", "sound"]
edition = "2021"
rust-version = "1.70"

[features]
asio = [
    "asio-sys",
    "num-traits",
] # Only available on Windows. See README for setup instructions.

# Deprecated, the `oboe` backend has been removed
oboe-shared-stdcxx = []

[dependencies]
dasp_sample = "0.11"

[dev-dependencies]
anyhow = "1.0"
hound = "3.5"
ringbuf = "0.4.8"
clap = { version = "4.5", features = ["derive"] }

# Support a range of versions in order to avoid duplication of this crate. Make sure to test all
# versions when bumping to a new release, and only increase the minimum when absolutely necessary.
# When updating this, also update the "windows-version" matrix in the CI workflow.
[target.'cfg(target_os = "windows")'.dependencies]
# The `implement` feature was removed in windows-0.61, which means that we can't
# use older versions of the `windows` crate without explicitly activating `implement`
# for them, which will cause problems for >=0.61.
#
# See <https://github.com/microsoft/windows-rs/pull/3333>.
windows = { version = ">=0.61, <=0.62", features = [
    "Win32_Media_Audio",
    "Win32_Foundation",
    "Win32_Devices_Properties",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Variant",
    "Win32_Media_Multimedia",
    "Win32_UI_Shell_PropertiesSystem",
] }
# Explicitly depend on windows-core for use with the `windows::core::implement` macro.
# Ensure this is the same version as the `windows` dependency.
windows-core = { version = ">0.58, <=0.62" }
audio_thread_priority = { version = "0.34.0", optional = true }
asio-sys = { version = "0.2", path = "asio-sys", optional = true }
num-traits = { version = "0.2.6", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd"))'.dependencies]
alsa = "0.10"
libc = "0.2"
audio_thread_priority = { version = "0.34.0", optional = true }
jack = { version = "0.13.0", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach2 = "0.5" # For access to mach_timebase type.

[target.'cfg(target_vendor = "apple")'.dependencies]
coreaudio-rs = { version = "0.13.0", default-features = false, features = [
    "core_audio",
    "audio_toolbox",
] }
objc2-core-audio = { version = "0.3.1", default-features = false, features = [
    "std",
    "AudioHardware",
    "AudioHardwareDeprecated",
    "objc2",
    "objc2-foundation",
] }
objc2-audio-toolbox = { version = "0.3.1", default-features = false, features = [
    "std",
    "AUComponent",
    "AudioUnitProperties",
] }
objc2-core-audio-types = { version = "0.3.1", default-features = false, features = [
    "std",
    "CoreAudioBaseTypes",
] }
objc2-core-foundation = { version = "0.3.1" }
objc2-foundation = { version = "0.3.1" }
objc2 = { version = "0.6.2" }

[target.'cfg(target_os = "emscripten")'.dependencies]
wasm-bindgen = { version = "0.2.89" }
wasm-bindgen-futures = "0.4.33"
js-sys = { version = "0.3.35" }
web-sys = { version = "0.3.35", features = [
    "AudioContext",
    "AudioContextOptions",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioNode",
    "AudioDestinationNode",
    "Window",
    "AudioContextState",
] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = { version = "0.2.58", optional = true }
js-sys = { version = "0.3.35" }
web-sys = { version = "0.3.35", features = [
    "AudioContext",
    "AudioContextOptions",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioNode",
    "AudioDestinationNode",
    "Window",
    "AudioContextState",
] }

[target.'cfg(target_os = "android")'.dependencies]
ndk = { version = "0.9", default-features = false, features = [
    "audio",
    "api-level-26",
] }
ndk-context = "0.1"
jni = "0.21"
num-derive = "0.4"
num-traits = "0.2"

[[example]]
name = "beep"

[[example]]
name = "enumerate"

[[example]]
name = "feedback"

[[example]]
name = "record_wav"

[[example]]
name = "synth_tones"
