[package]
name = "asio-sys"
version = "0.2.0"
authors = ["Tom Gowan <tomrgowan@gmail.com>"]
description = "Low-level interface and binding generation for the steinberg ASIO SDK."
repository = "https://github.com/RustAudio/cpal/"
documentation = "https://docs.rs/asio-sys"
license = "Apache-2.0"
keywords = ["audio", "sound", "asio", "steinberg"]
build = "build.rs"

[target.'cfg(any(target_os = "windows"))'.build-dependencies]
bindgen = "0.54.0"
walkdir = "2"
cc = "1.0.25"

[dependencies]
lazy_static = "1.0.0"
num-derive = "0.3"
num-traits = "0.2"
