[package]
name = "pipewire-client"
version = "0.1.0"
edition = "2021"
authors = ["Alexis Bekhdadi <alexis@bekhdadi.com>"]
description = "PipeWire Client"
repository = "https://github.com/RustAudio/cpal/"
documentation = ""
license = "Apache-2.0"
keywords = ["pipewire", "client"]

[dependencies]
pipewire = { version = "0.8" }
pipewire-spa-utils = { version = "0.1", path = "../pipewire-spa-utils"}
serde_json = "1.0"
crossbeam-channel = "0.5"

[dev-dependencies]
rstest = "0.24"
serial_test = "3.2"
testcontainers = "0.23"