[package]
name = "pipewire-client"
version = "0.1.0"
edition = "2021"
authors = ["Alexis Bekhdadi <alexis@bekhdadi.com>"]
description = "PipeWire Client"
repository = "https://github.com/RustAudio/cpal/"
documentation = ""
license = "Apache-2.0"
keywords = ["pipewire", "client"]

[dependencies]
pipewire = { version = "0.8" }
pipewire-spa-utils = { version = "0.1", path = "../pipewire-spa-utils"}
pipewire-common = { version = "0.1", path = "../pipewire-common" }
serde_json = "1.0"
crossbeam-channel = "0.5"
uuid = { version = "1.12", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
libc = "0.2"

[dev-dependencies]
rstest = "0.24"
serial_test = "3.2"
ctor = "0.2"
pipewire-test-utils = { version = "0.1", path = "../pipewire-test-utils" }